--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
-  "trailingComma": "none",
-  "tabWidth": 2,
   "semi": false,
-  "singleQuote": true
+  "tabWidth": 2,
+  "printWidth": 140,
+  "singleQuote": true,
+  "trailingComma": "none",
+  "endOfLine": "auto"
 }
